--- a/demo/app/index.html
+++ b/demo/app/index.html
@@ -10,5 +10,6 @@
     <a href="www.sexix.net"></a>
     <script src="./app.js"></script>
     <script src="route.js"></script>
+    <script src="./assets/assets.js"></script>
 </body>
 </html>
