--- a/demo/dist2016-12-04T232210.635/index.html
+++ b/demo/dist2016-12-04T232210.635/index.html
@@ -8,7 +8,8 @@
 <body>
 
     <a href="www.sexix.net"></a>
-    <script src="./app.js?v=1fbb"></script>
-    <script src="route.js?v=12bc"></script>
+    <script src="./app.js?v=2093"></script>
+    <script src="route.js?v=1394"></script>
+    <script src="./assets/assets.js?v=3f16"></script>
 </body>
 </html>
